--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "formidable": "^2.1.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.1",
-    "morgan": "^1.10.0",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "mongoose": "^6.11.1",
+    "morgan": "^1.10.0"
   },
   "name": "server",
   "version": "1.0.0",
